# canvas-terminal

./: .gitignore  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: collaborator-inbox-system-plan.md
docs/shorts/: README.md  youtube-short.html  youtube-short.srt
scripts/: bump-version.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: canvas.rs  memory.rs  mod.rs  pty.rs
src-tauri/tests/: pty_eintr.rs
src/components/canvas/: CanvasIntegration.tsx  DrawingBoard.tsx  Toolbar.tsx  useCanvas.ts
src/components/collaborator/: AgentMiniTerminal.test.ts  AgentMiniTerminal.tsx  AgentToolbar.tsx  AtMention.tsx  CollabSessionContext.tsx  CollaboratorPane.test.tsx  CollaboratorPane.tsx  FileCompletion.tsx  InputPrompt.tsx  commands.ts
src/constants/: canvas.ts
src/hooks/: useKeyboardShortcuts.ts
src/lib/: agentOutputCapture.test.ts  agentOutputCapture.ts  canvasOps.test.ts  canvasOps.ts  documentRenderer.test.ts  documentRenderer.ts  markdownRoundTrip.test.ts  responseRenderer.test.ts  responseRenderer.ts  serializer.ts  sessionId.ts  terminalManager.ts
src/stores/: canvasStore.ts  collaboratorStore.test.ts  collaboratorStore.ts  terminalStore.ts  toastStore.test.ts  toastStore.ts
src/styles/: globals.css
src/types/: canvas.ts  collaborator.ts  terminal.ts
(+7 files in other folders)
