[package]
name = "canvas-terminal"
version = "0.1.3"
edition = "2021"

[lib]
name = "canvas_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
portable-pty = "0.8"
libc = "0.2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
dirs = "6"
serde_json = "1"
